--- a/app/assets/stylesheets/exercise_edit_app.css.scss
+++ b/app/assets/stylesheets/exercise_edit_app.css.scss
@@ -24,6 +24,10 @@ $edit_app_light_gray: lighten($os_gray,50%);
     font-size: 18px;
     float: left;
     margin: 0px 15px 15px 15px;
+
+    &.hidden {
+      display: none;
+    }
   }
 
   .part {
