--- a/app/assets/stylesheets/exercise_edit_app.css.scss
+++ b/app/assets/stylesheets/exercise_edit_app.css.scss
@@ -13,7 +13,21 @@ $edit_app_light_gray: lighten($os_gray,50%);
   .content .empty {
     height: 40px;
     width: 100%;
+    margin-bottom: 10px;
     border: 1px solid $edit_app_light_gray;
+    background: image-url("scribble.png") transparent;
+    background-position: 0 -3px;
+    text-align: center;
+    .spacer {
+      width: 100%;
+      height: 8px;
+    }     
+    .message {
+      color: lighten(black, 75%);
+      font-size: 16px;
+      padding: 1px 3px;
+      background-color: white;    
+    }      
   }
 
   ul, ol {
