--- a/app/assets/stylesheets/layouts/application_body_api_docs.css.scss
+++ b/app/assets/stylesheets/layouts/application_body_api_docs.css.scss
@@ -7,8 +7,12 @@
 
   @include body-margins;
 
-  ul {
+  ul, ol {
     margin-left: 25px;
+  }
+
+  blockquote p {
+    font-size: 12px;
   }
 
 .breadcrumb {
