--- a/app/views/doorkeeper/applications/index.html.erb
+++ b/app/views/doorkeeper/applications/index.html.erb
@@ -1,25 +1,28 @@
-<%= page_heading 'OAuth applications' %>
+<div class="span16">
+  <%= page_heading "OAuth Applications" %>
+  
+  <p><%= link_to 'New Application',
+                 new_user_group_oauth_application_path(@user_group),
+                 style: 'float:right' %></p>
 
-<div>
-
-  <p><%= link_to 'New Application', new_oauth_application_path %></p>
-
-  <table class="style-1">
+  <table class="std-list-1">
     <thead>
       <tr>
-        <th width="25%">Name</th>
-        <th width="75%">Callback url</th>
-        <th width="12%"></th>
-        <th width="13%"></th>
+        <th>Name</th>
+        <th>Callback url</th>
+        <th></th>
+        <th></th>
       </tr>
     </thead>
     <tbody>
       <% @applications.each do |application| %>
-        <tr id="application_<%= application.id %>" class="<%= cycle('odd', 'even') %>">
+        <tr id="application_<%= application.id %>">
           <td><%= link_to application.name, [:oauth, application] %></td>
           <td><%= application.redirect_uri %></td>
-          <td><%= link_to 'Edit', edit_oauth_application_path(application) %></td>
-          <td><%= link_to 'Destroy', [:oauth, application], :data => { :confirm => 'Are you sure?' }, :method => :delete %></td>
+          <td><%= link_to('Edit', edit_oauth_application_path(application)) \
+            if AccessPolicy.action_allowed?(:update, @user, application) %></td>
+          <td><%= link_to('Remove', [:oauth, application], :data => { :confirm => 'Are you sure?' }, :method => :delete) \
+            if AccessPolicy.action_allowed?(:destroy, @user, application) %></td>
         </tr>
       <% end %>
     </tbody>
