--- a/app/views/doorkeeper/applications/edit.html.erb
+++ b/app/views/doorkeeper/applications/edit.html.erb
@@ -6,6 +6,7 @@
 
 <div class="span4">
   <h3>Actions</h3>
-  <p><%= link_to 'Back to application list', oauth_applications_path %></p>
+  <p><%= link_to 'Back to application list',
+                 user_group_oauth_applications_path(@application.owner) %></p>
 </div>
 
