--- a/app/views/doorkeeper/applications/show.html.erb
+++ b/app/views/doorkeeper/applications/show.html.erb
@@ -25,10 +25,10 @@
   <h3>Actions</h3>
   <p><%= link_to 'Application List',
                  user_group_oauth_applications_path(@application.owner) %></p>
-  <% if AccessPolicy.action_allowed?(:update, @user, @application) %>
+  <% if OSU::AccessPolicy.action_allowed?(:update, @user, @application) %>
   <p><%= link_to 'Edit', edit_oauth_application_path(@application) %></p>
   <% end %>
-  <% if AccessPolicy.action_allowed?(:destroy, @user, @application) %>
+  <% if OSU::AccessPolicy.action_allowed?(:destroy, @user, @application) %>
   <p><%= link_to 'Remove', [:oauth, @application], :method => :delete, :data => { :confirm => "Are you sure?" } %></p>
   <% end %>
 </div>
