--- a/app/views/admin/base/_console_dialog.html.erb
+++ b/app/views/admin/base/_console_dialog.html.erb
@@ -9,6 +9,11 @@
     <ul class="nav nav-tabs tight-bottom">
       <li class="active"><a href="#misc-tab" data-toggle="tab">Misc</a></li>
       <li><a href="#users-tab" data-toggle="tab">Users</a></li>
+      <% unless Rails.env.production? %>
+        <li class="developer">
+          <a href="#developer-tab" data-toggle="tab">Dev</a>
+        </li>
+      <% end %>
     </ul>
   </div>
 
@@ -24,6 +29,12 @@
       <div class="tab-pane" id="users-tab">
         <%= render 'users' %>
       </div>
+
+      <% unless Rails.env.production? %>
+        <div class="tab-pane" id="developer-tab">
+          <%= render 'admin/dev/base/index' %>
+        </div>
+      <% end %>
     </div>
     
   </div>
