--- a/app/views/admin/base/_users.html.erb
+++ b/app/views/admin/base/_users.html.erb
@@ -1,7 +1,5 @@
-<%# Renderer's of this partial can direct the form's target with 'override_search_path' %>
-
-<%= lev_form_for :search, 
-                 url: (override_search_path ||= search_admin_users_path), 
+<%= lev_form_for :search,
+                 url: search_admin_users_path,
                  remote: true,
                  html: {class: 'form-inline'} do |f| %>
 
