User search WIP

--- a/app/assets/stylesheets/general.css.scss
+++ b/app/assets/stylesheets/general.css.scss
@@ -17,3 +17,12 @@ table.std-list-1 {
 div.not-full-width {
   width: 60%;
 }
+
+#search-results-list {
+  @include std-table-list-1;
+  margin-top: 17px;
+
+  #search-results-pagination {
+    float: right;
+  }
+}
