--- a/app/views/admin/base/_console_dialog.html.erb
+++ b/app/views/admin/base/_console_dialog.html.erb
@@ -27,12 +27,14 @@
       </div>
 
       <div class="tab-pane" id="users-tab">
-        <%= render 'users' %>
+        <%= render :partial => 'openstax/accounts/shared/users/search',
+                   :locals => { :search_action_path => search_admin_users_path,
+                                :remote => true } %>
       </div>
 
       <% unless Rails.env.production? %>
         <div class="tab-pane" id="developer-tab">
-          <%= render 'admin/dev/base/index' %>
+          <%= render 'dev/base/index' %>
         </div>
       <% end %>
     </div>
