--- a/app/views/dev/base/_index.html.erb
+++ b/app/views/dev/base/_index.html.erb
@@ -1,7 +1,7 @@
 <%= osu.section_block "Create a new user" do %>
 
   <div style="width: 500px">
-    <%= lev_form_for :create, url: admin_dev_users_path, remote: true,
+    <%= lev_form_for :create, url: dev_users_path, remote: true,
                      html: {id: 'create-user-form', class: 'form-horizontal'} do |f| %>
 
       <div class='form-group'>
@@ -42,10 +42,10 @@
 <% end %>
 
 <%= osu.section_block "Generate new users" do %>
-    <%= lev_form_for :generate, url: generate_admin_dev_users_path, remote: true,
+    <%= lev_form_for :generate, url: generate_dev_users_path, remote: true,
                      html: {id: 'generate-users-form', class: 'form-inline'} do |f| %>
                      
-      Generate <%= f.text_field :count, style: 'width:30px' %> user(s) 
+      Generate <%= f.text_field :count, style: 'width:50px' %> user(s) 
       <%= f.submit 'Do it now!' %>
     <% end %>
 <% end %>
