--- a/app/views/admin/users/_search_pagination.html.erb
+++ b/app/views/admin/users/_search_pagination.html.erb
@@ -24,7 +24,7 @@
     <% linked_page_numbers.each do |lpn| %>
       <%= link_to_unless lpn == page + 1,
                          lpn, 
-                         search_admin_users_path(search: {terms: @handler_result.outputs[:query], page: lpn-1, per_page: per_page}), remote: true %>
+                         admin_users_path(search: {terms: @handler_result.outputs[:query], page: lpn-1, per_page: per_page}), remote: true %>
     <% end %>
   <% end %>
 </div>
