--- a/app/views/dev/users/_index.html.erb
+++ b/app/views/dev/users/_index.html.erb
@@ -1,8 +1,13 @@
-<h4>Create a new user</h4>
+<h5>Create User</h5>
 <div style="width: 500px">
   <%= lev_form_for :create, url: dev_users_path, remote: true,
                    html: {id: 'create-user-form', class: 'form-horizontal'} do |f| %>
-
+    <div class='form-group'>
+      <label class='col-sm-3 control-label'>Username</label>
+      <div class='col-sm-9'>
+        <%= f.text_field :username, class: 'form-control' %>
+      </div>
+    </div>
     <div class='form-group'>
       <label class='col-sm-3 control-label'>First name</label>
       <div class='col-sm-9'>
@@ -16,32 +21,41 @@
       </div>
     </div>
     <div class='form-group'>
-      <label class='col-sm-3 control-label'>Username</label>
+      <label class='col-sm-3 control-label'>Full name</label>
       <div class='col-sm-9'>
-        <%= f.text_field :username, class: 'form-control' %>
+        <%= f.text_field :full_name, class: 'form-control' %>
       </div>
     </div>
     <div class='form-group'>
-        <label class='col-sm-3 control-label'>Admin?</label>
+      <label class='col-sm-3 control-label'>Title</label>
+      <div class='col-sm-9'>
+        <%= f.text_field :title, class: 'form-control' %>
+      </div>
+    </div>
+    <div class='form-group'>
+        <label class='col-sm-3 control-label'>Administrator?</label>
         <div class=' col-sm-9'>
-
-            <%= f.check_box :is_admin %>
-
+          <%= f.check_box :administrator %>
+        </div>
+    </div>
+    <div class='form-group'>
+        <label class='col-sm-3 control-label'>Agreed to Terms?</label>
+        <div class=' col-sm-9'>
+          <%= f.check_box :agreed_to_terms %>
         </div>
     </div>
     <div class='form-group'>
       <div class='col-sm-offset-3 col-sm-9'>
-        <%= f.submit 'Register' %>
+        <%= f.submit 'Create User' %>
       </div>
     </div>
-
   <% end %>
 </div>
 
-<h4>Generate new users</h4>
+<h5>Auto-generate Users</h5>
 <%= lev_form_for :generate, url: generate_dev_users_path, remote: true,
                  html: {id: 'generate-users-form', class: 'form-inline'} do |f| %>
                  
-  Generate <%= f.text_field :count, style: 'width:50px' %> user(s) 
-  <%= f.submit 'Do it now!' %>
+  <div>Generate <%= f.text_field :count, style: 'width:50px' %> user(s)</div>
+  <div><%= f.submit 'Do It' %></div>
 <% end %>
