--- a/app/views/admin/console/_index.html.erb
+++ b/app/views/admin/console/_index.html.erb
@@ -11,7 +11,7 @@
       <li><a href="#exceptions-tab" data-toggle="tab">Exceptions</a></li>
       <% unless Rails.env.production? %>
         <li class="dev">
-          <a href="#dev-tab" data-toggle="tab">Dev</a>
+          <a href="#dev-tab" data-toggle="tab" class="orange">Dev</a>
         </li>
       <% end %>
     </ul>
