Some admin control panel fixes; Added trusted applications

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -39,6 +39,10 @@ button.standard, input[type='submit'].standard {
   } 
 }
 
+.btn-success {
+  color: white !important;
+}
+
 select, input[type='text'], input[type='search'] {
   @extend .form-control;
 }
