--- a/app/views/admin/console/_manage.html.erb
+++ b/app/views/admin/console/_manage.html.erb
@@ -2,8 +2,11 @@
 <ul class="normal">
   <li><%= link_to "Users", admin_users_url %></li>
   <li><%= link_to "Administrators", admin_administrators_url %></li>
-  <li><%= link_to "Manage Site Terms", fine_print.root_url %></li>
+
+  <li><%= link_to "Site Terms", fine_print.root_url %></li>
   <li><%= link_to "Content Licenses", admin_licenses_url %></li>
+  <li><%= link_to "Oauth Applications", oauth_applications_url %></li>
+
   <li><%= link_to "Required Libraries", admin_required_libraries_url %></li>
   <li><%= link_to "Question Formats", admin_formats_url %></li>
   <li><%= link_to "Logic Languages", admin_languages_url %></li>
