--- a/app/views/admin/users/index.js.erb
+++ b/app/views/admin/users/index.js.erb
@@ -1,3 +1,6 @@
 <%= unless_errors alerts_html_id: 'dialog-local-alerts' do %>
-  $("#search-results-list").html("<%= j(render partial: 'admin/users/search_results') %>");
+  $("#search-results-list").html("<%= j(
+    render partial: 'admin/users/list',
+           locals: {action_partial: 'admin/users/delete',
+                    sign_in_as: true}) %>");
 <% end %>
